--- a/aframework/aframework-web/src/main/resources/database.properties
+++ b/aframework/aframework-web/src/main/resources/database.properties
@@ -1,46 +1,45 @@
-#mater db
+# AFData
+#master-slave
 jdbc.master.url=jdbc:mysql://172.16.2.85:3306/AFData?useUnicode=true&characterEncoding=utf-8
 jdbc.master.username=root
 jdbc.master.password=123456
-#master order db
-jdbc.master.order_2017.url=jdbc:mysql://172.16.2.85:3306/AFOrder_2017?useUnicode=true&characterEncoding=utf-8
-jdbc.master.order_2017.username=root
-jdbc.master.order_2017.password=123456
-
-jdbc.master.order_2018.url=jdbc:mysql://172.16.2.85:3306/AFOrder_2018?useUnicode=true&characterEncoding=utf-8
-jdbc.master.order_2018.username=root
-jdbc.master.order_2018.password=123456
-
-
-
-#salve1 db
 jdbc.slave1.url=jdbc:mysql://172.16.2.86:3306/AFData?useUnicode=true&characterEncoding=utf-8
 jdbc.slave1.username=root
 jdbc.slave1.password=123456
-#salve1 order db
-jdbc.slave1.order_2017.url=jdbc:mysql://172.16.2.86:3306/AFOrder_2017?useUnicode=true&characterEncoding=utf-8
-jdbc.slave1.order_2017.username=root
-jdbc.slave1.order_2017.password=123456
-
-jdbc.slave1.order_2018.url=jdbc:mysql://172.16.2.86:3306/AFOrder_2018?useUnicode=true&characterEncoding=utf-8
-jdbc.slave1.order_2018.username=root
-jdbc.slave1.order_2018.password=123456
-
-
-#salve2 db
 jdbc.slave2.url=jdbc:mysql://172.16.2.87:3306/AFData?useUnicode=true&characterEncoding=utf-8
 jdbc.slave2.username=root
 jdbc.slave2.password=123456
-#salve2 order db
-jdbc.slave2.order_2017.url=jdbc:mysql://172.16.2.87:3306/AFOrder_2017?useUnicode=true&characterEncoding=utf-8
-jdbc.slave2.order_2017.username=root
-jdbc.slave2.order_2017.password=123456
-
-jdbc.slave2.order_2018.url=jdbc:mysql://172.16.2.87:3306/AFOrder_2018?useUnicode=true&characterEncoding=utf-8
-jdbc.slave2.order_2018.username=root
-jdbc.slave2.order_2018.password=123456
-
-
+# AFOrder
+# order_0  master-salve
+jdbc.master.order_0.url=jdbc:mysql://172.16.2.85:3306/AFOrder_0?useUnicode=true&characterEncoding=utf-8
+jdbc.master.order_0.username=root
+jdbc.master.order_0.password=123456
+jdbc.slave1.order_0.url=jdbc:mysql://172.16.2.86:3306/AFOrder_0?useUnicode=true&characterEncoding=utf-8
+jdbc.slave1.order_0.username=root
+jdbc.slave1.order_0.password=123456
+jdbc.slave2.order_0.url=jdbc:mysql://172.16.2.87:3306/AFOrder_0?useUnicode=true&characterEncoding=utf-8
+jdbc.slave2.order_0.username=root
+jdbc.slave2.order_0.password=123456
+# order_1  master-salve
+jdbc.master.order_1.url=jdbc:mysql://172.16.2.85:3306/AFOrder_1?useUnicode=true&characterEncoding=utf-8
+jdbc.master.order_1.username=root
+jdbc.master.order_1.password=123456
+jdbc.slave1.order_1.url=jdbc:mysql://172.16.2.86:3306/AFOrder_1?useUnicode=true&characterEncoding=utf-8
+jdbc.slave1.order_1.username=root
+jdbc.slave1.order_1.password=123456
+jdbc.slave2.order_1.url=jdbc:mysql://172.16.2.87:3306/AFOrder_1?useUnicode=true&characterEncoding=utf-8
+jdbc.slave2.order_1.username=root
+jdbc.slave2.order_1.password=123456
+# order_2  master-salve
+jdbc.master.order_2.url=jdbc:mysql://172.16.2.85:3306/AFOrder_2?useUnicode=true&characterEncoding=utf-8
+jdbc.master.order_2.username=root
+jdbc.master.order_2.password=123456
+jdbc.slave1.order_2.url=jdbc:mysql://172.16.2.86:3306/AFOrder_2?useUnicode=true&characterEncoding=utf-8
+jdbc.slave1.order_2.username=root
+jdbc.slave1.order_2.password=123456
+jdbc.slave2.order_2.url=jdbc:mysql://172.16.2.87:3306/AFOrder_2?useUnicode=true&characterEncoding=utf-8
+jdbc.slave2.order_2.username=root
+jdbc.slave2.order_2.password=123456
 #redis db
 redis.hostName=172.16.2.86
 redis.port=6379
