--- a/aframework/aframework-data/src/test/resources/database.properties
+++ b/aframework/aframework-data/src/test/resources/database.properties
@@ -1,45 +1,15 @@
 # AFData
 #master-slave
-jdbc.master.url=jdbc:mysql://172.16.2.85:3306/AFData?useUnicode=true&characterEncoding=utf-8
-jdbc.master.username=root
-jdbc.master.password=123456
-jdbc.slave1.url=jdbc:mysql://172.16.2.86:3306/AFData?useUnicode=true&characterEncoding=utf-8
-jdbc.slave1.username=root
-jdbc.slave1.password=123456
-jdbc.slave2.url=jdbc:mysql://172.16.2.87:3306/AFData?useUnicode=true&characterEncoding=utf-8
-jdbc.slave2.username=root
-jdbc.slave2.password=123456
+jdbc.master.afdata.url=jdbc:mysql://172.16.2.85:3306/AFData?useUnicode=true&characterEncoding=utf-8
+jdbc.master.afdata.username=root
+jdbc.master.afdata.password=123456
+
 # AFOrder
-# order_0  master-salve
-jdbc.master.order_0.url=jdbc:mysql://172.16.2.85:3306/AFOrder_0?useUnicode=true&characterEncoding=utf-8
-jdbc.master.order_0.username=root
-jdbc.master.order_0.password=123456
-jdbc.slave1.order_0.url=jdbc:mysql://172.16.2.86:3306/AFOrder_0?useUnicode=true&characterEncoding=utf-8
-jdbc.slave1.order_0.username=root
-jdbc.slave1.order_0.password=123456
-jdbc.slave2.order_0.url=jdbc:mysql://172.16.2.87:3306/AFOrder_0?useUnicode=true&characterEncoding=utf-8
-jdbc.slave2.order_0.username=root
-jdbc.slave2.order_0.password=123456
-# order_1  master-salve
-jdbc.master.order_1.url=jdbc:mysql://172.16.2.85:3306/AFOrder_1?useUnicode=true&characterEncoding=utf-8
-jdbc.master.order_1.username=root
-jdbc.master.order_1.password=123456
-jdbc.slave1.order_1.url=jdbc:mysql://172.16.2.86:3306/AFOrder_1?useUnicode=true&characterEncoding=utf-8
-jdbc.slave1.order_1.username=root
-jdbc.slave1.order_1.password=123456
-jdbc.slave2.order_1.url=jdbc:mysql://172.16.2.87:3306/AFOrder_1?useUnicode=true&characterEncoding=utf-8
-jdbc.slave2.order_1.username=root
-jdbc.slave2.order_1.password=123456
-# order_2  master-salve
-jdbc.master.order_2.url=jdbc:mysql://172.16.2.85:3306/AFOrder_2?useUnicode=true&characterEncoding=utf-8
-jdbc.master.order_2.username=root
-jdbc.master.order_2.password=123456
-jdbc.slave1.order_2.url=jdbc:mysql://172.16.2.86:3306/AFOrder_2?useUnicode=true&characterEncoding=utf-8
-jdbc.slave1.order_2.username=root
-jdbc.slave1.order_2.password=123456
-jdbc.slave2.order_2.url=jdbc:mysql://172.16.2.87:3306/AFOrder_2?useUnicode=true&characterEncoding=utf-8
-jdbc.slave2.order_2.username=root
-jdbc.slave2.order_2.password=123456
+# master-salve
+jdbc.master.aforder.url=jdbc:mysql://172.16.2.85:3306/AFOrder?useUnicode=true&characterEncoding=utf-8
+jdbc.master.aforder.username=root
+jdbc.master.aforder.password=123456
+
 #redis db
 redis.hostName=172.16.2.86
 redis.port=6379
