--- a/aframework/aframework-configure/src/main/resources/log4j.properties
+++ b/aframework/aframework-configure/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=Warn,stdout,warn,error
+log4j.rootLogger=DEBUG,stdout,warn,error
 
 #Stdout
 log4j.additivity.stdout=false
@@ -39,6 +39,8 @@ log4j.appender.error.layout.ConversionPattern=[%p][%d{yyyy-MM-dd HH:mm:ss}] %l %
 
 # MyBatis
 log4j.logger.org.mybatis=DEBUG 
+
+
 
 #JdbcTemplate
 log4j.logger.org.springframework.jdbc.core=DEBUG
